--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -84,6 +84,18 @@
     <Compile Include="Services\CustomTextBox.Designer.cs">
       <DependentUpon>CustomTextBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\LigneVerticale.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Services\LigneVerticale.Designer.cs">
+      <DependentUpon>LigneVerticale.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Services\LigneHorizontale.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Services\LigneHorizontale.Designer.cs">
+      <DependentUpon>LigneHorizontale.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Organizations\OrganizationListProjects.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -193,6 +205,18 @@
     <Compile Include="Windows\Teams\TeamStatistiques\TitreStatistique.Designer.cs">
       <DependentUpon>TitreStatistique.cs</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Users\UserListUsers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Users\UserListUsers.Designer.cs">
+      <DependentUpon>UserListUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Users\UserMainList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Users\UserMainList.Designer.cs">
+      <DependentUpon>UserMainList.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Windows\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -246,6 +270,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Teams\TeamStatistiques\TitreStatistique.resx">
       <DependentUpon>TitreStatistique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Users\UserListUsers.resx">
+      <DependentUpon>UserListUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Users\UserMainList.resx">
+      <DependentUpon>UserMainList.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\StoriesHelper.exe.config" />
     <None Include="packages.config" />
