--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\ColumnState.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\ColumnStateRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Services\Calcul.cs" />
     <Compile Include="Services\CustomTextBox.cs">
       <SubType>Component</SubType>
