--- a/StoriesHelper/StoriesHelper.csproj
+++ b/StoriesHelper/StoriesHelper.csproj
@@ -78,9 +78,9 @@
     <Compile Include="Images\IconeUser.Designer.cs">
       <DependentUpon>IconeUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Collaborator.cs" />
     <Compile Include="Models\ColumnState.cs" />
+    <Compile Include="Models\LogHistory.cs" />
+    <Compile Include="Repository\LogHistoryRepository.cs" />
     <Compile Include="Repository\ProjectRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\ColumnStateRepository.cs" />
@@ -107,6 +107,18 @@
     </Compile>
     <Compile Include="Services\TeamNameType.cs" />
     <Compile Include="Services\ProjectNameType.cs" />
+    <Compile Include="Windows\Logs\LogConsole.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Logs\LogConsole.Designer.cs">
+      <DependentUpon>LogConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Logs\LogMain.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Windows\Logs\LogMain.Designer.cs">
+      <DependentUpon>LogMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Organizations\Icons\IconProject.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -305,6 +317,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Logs\LogConsole.resx">
+      <DependentUpon>LogConsole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Logs\LogMain.resx">
+      <DependentUpon>LogMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\main.resx">
       <DependentUpon>main.cs</DependentUpon>
